[package]
name = "push_rust"
version = "0.1.0"
authors = ["Yeshwanth Bommareddy <40725768+yeshwanth32@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.5"